manifests/yamls/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: devtroncd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.domainName.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
